@@ -1,6 +1,7 @@
 //////////////////////////////////////////////////////////////////////////
 //
 //  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2012, John Haddon. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -37,6 +38,7 @@
 #include "IECore/DisplayDriver.h"
 #include "IECore/BoxAlgo.h"
 #include "IECore/SimpleTypedData.h"
+#include "IECore/MessageHandler.h"
 
 #include "IECoreArnold/ToArnoldConverter.h"
 
@@ -122,7 +124,16 @@ static AtVoid driverOpen( AtNode *node, struct AtOutputIterator *iterator, AtBBo
 	const char *driverType = AiNodeGetStr( node, "driverType" );
 	
 	DisplayDriverPtr *driver = (DisplayDriverPtr *)AiDriverGetLocalData( node );
-	*driver = IECore::DisplayDriver::create( driverType, cortexDisplayWindow, cortexDataWindow, channelNames, parameters );
+	try
+	{
+		*driver = IECore::DisplayDriver::create( driverType, cortexDisplayWindow, cortexDataWindow, channelNames, parameters );
+	}
+	catch( const std::exception &e )
+	{
+		// we have to catch and report exceptions because letting them out into pure c land
+		// just causes aborts.
+		msg( Msg::Error, "ieOutputDriver:driverOpen", e.what() );
+	}
 }
 
 static AtVoid driverPrepareBucket( AtNode *node, AtInt x, AtInt y, AtInt sx, AtInt sy, AtInt tId )
@@ -132,7 +143,11 @@ static AtVoid driverPrepareBucket( AtNode *node, AtInt x, AtInt y, AtInt sx, AtI
 static AtVoid driverWriteBucket( AtNode *node, struct AtOutputIterator *iterator, struct AtAOVSampleIterator *sampleIterator, AtInt x, AtInt y, AtInt sx, AtInt sy ) 
 {
 	DisplayDriverPtr *driver = (DisplayDriverPtr *)AiDriverGetLocalData( node );
-
+	if( !*driver )
+	{
+		return;
+	}
+	
 	const int numOutputChannels = (*driver)->channelNames().size();
 
 	std::vector<float> interleavedData;
@@ -180,13 +195,34 @@ static AtVoid driverWriteBucket( AtNode *node, struct AtOutputIterator *iterator
 		V2i( x + sx - 1, y + sy - 1 )
 	);
 
-	(*driver)->imageData( bucketBox, &(interleavedData[0]), interleavedData.size() );
+	try
+	{
+		(*driver)->imageData( bucketBox, &(interleavedData[0]), interleavedData.size() );
+	}
+	catch( const std::exception &e )
+	{
+		// we have to catch and report exceptions because letting them out into pure c land
+		// just causes aborts.
+		msg( Msg::Error, "ieOutputDriver:driverWriteBucket", e.what() );
+	}
 }
 
 static AtVoid driverClose( AtNode *node, struct AtOutputIterator *iterator )
 {
 	DisplayDriverPtr *driver = (DisplayDriverPtr *)AiDriverGetLocalData( node );
-	(*driver)->imageClose();  
+	if( *driver )
+	{
+		try
+		{
+			(*driver)->imageClose(); 
+		}
+		catch( const std::exception &e )
+		{
+			// we have to catch and report exceptions because letting them out into pure c land
+			// just causes aborts.
+			msg( Msg::Error, "ieOutputDriver:driverClose", e.what() );
+		}
+	}
 }
 
 static AtVoid driverFinish( AtNode *node )
